--- a/notebooks/feature engineering.ipynb
+++ b/notebooks/feature engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "18ce112b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "11306bf7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "96e6de1c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "4502c576",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "7187e0a3",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "2e7bb274",
    "metadata": {},
    "outputs": [
@@ -82,13 +82,116 @@
        "(42064, 79)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "13296fbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 42064 entries, 0 to 42063\n",
+      "Data columns (total 79 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   PROSPECTID                  42064 non-null  int64  \n",
+      " 1   Total_TL                    42064 non-null  int64  \n",
+      " 2   Tot_Closed_TL               42064 non-null  int64  \n",
+      " 3   Tot_Active_TL               42064 non-null  int64  \n",
+      " 4   Total_TL_opened_L6M         42064 non-null  int64  \n",
+      " 5   Tot_TL_closed_L6M           42064 non-null  int64  \n",
+      " 6   pct_tl_open_L6M             42064 non-null  float64\n",
+      " 7   pct_tl_closed_L6M           42064 non-null  float64\n",
+      " 8   pct_active_tl               42064 non-null  float64\n",
+      " 9   pct_closed_tl               42064 non-null  float64\n",
+      " 10  Total_TL_opened_L12M        42064 non-null  int64  \n",
+      " 11  Tot_TL_closed_L12M          42064 non-null  int64  \n",
+      " 12  pct_tl_open_L12M            42064 non-null  float64\n",
+      " 13  pct_tl_closed_L12M          42064 non-null  float64\n",
+      " 14  Tot_Missed_Pmnt             42064 non-null  int64  \n",
+      " 15  Auto_TL                     42064 non-null  int64  \n",
+      " 16  CC_TL                       42064 non-null  int64  \n",
+      " 17  Consumer_TL                 42064 non-null  int64  \n",
+      " 18  Gold_TL                     42064 non-null  int64  \n",
+      " 19  Home_TL                     42064 non-null  int64  \n",
+      " 20  PL_TL                       42064 non-null  int64  \n",
+      " 21  Secured_TL                  42064 non-null  int64  \n",
+      " 22  Unsecured_TL                42064 non-null  int64  \n",
+      " 23  Other_TL                    42064 non-null  int64  \n",
+      " 24  Age_Oldest_TL               42064 non-null  int64  \n",
+      " 25  Age_Newest_TL               42064 non-null  int64  \n",
+      " 26  time_since_recent_payment   42064 non-null  int64  \n",
+      " 27  num_times_delinquent        42064 non-null  int64  \n",
+      " 28  max_recent_level_of_deliq   42064 non-null  int64  \n",
+      " 29  num_deliq_6mts              42064 non-null  int64  \n",
+      " 30  num_deliq_12mts             42064 non-null  int64  \n",
+      " 31  num_deliq_6_12mts           42064 non-null  int64  \n",
+      " 32  num_times_30p_dpd           42064 non-null  int64  \n",
+      " 33  num_times_60p_dpd           42064 non-null  int64  \n",
+      " 34  num_std                     42064 non-null  int64  \n",
+      " 35  num_std_6mts                42064 non-null  int64  \n",
+      " 36  num_std_12mts               42064 non-null  int64  \n",
+      " 37  num_sub                     42064 non-null  int64  \n",
+      " 38  num_sub_6mts                42064 non-null  int64  \n",
+      " 39  num_sub_12mts               42064 non-null  int64  \n",
+      " 40  num_dbt                     42064 non-null  int64  \n",
+      " 41  num_dbt_6mts                42064 non-null  int64  \n",
+      " 42  num_dbt_12mts               42064 non-null  int64  \n",
+      " 43  num_lss                     42064 non-null  int64  \n",
+      " 44  num_lss_6mts                42064 non-null  int64  \n",
+      " 45  num_lss_12mts               42064 non-null  int64  \n",
+      " 46  recent_level_of_deliq       42064 non-null  int64  \n",
+      " 47  tot_enq                     42064 non-null  int64  \n",
+      " 48  CC_enq                      42064 non-null  int64  \n",
+      " 49  CC_enq_L6m                  42064 non-null  int64  \n",
+      " 50  CC_enq_L12m                 42064 non-null  int64  \n",
+      " 51  PL_enq                      42064 non-null  int64  \n",
+      " 52  PL_enq_L6m                  42064 non-null  int64  \n",
+      " 53  PL_enq_L12m                 42064 non-null  int64  \n",
+      " 54  time_since_recent_enq       42064 non-null  int64  \n",
+      " 55  enq_L12m                    42064 non-null  int64  \n",
+      " 56  enq_L6m                     42064 non-null  int64  \n",
+      " 57  enq_L3m                     42064 non-null  int64  \n",
+      " 58  MARITALSTATUS               42064 non-null  object \n",
+      " 59  EDUCATION                   42064 non-null  object \n",
+      " 60  AGE                         42064 non-null  int64  \n",
+      " 61  GENDER                      42064 non-null  object \n",
+      " 62  NETMONTHLYINCOME            42064 non-null  int64  \n",
+      " 63  Time_With_Curr_Empr         42064 non-null  int64  \n",
+      " 64  pct_of_active_TLs_ever      42064 non-null  float64\n",
+      " 65  pct_opened_TLs_L6m_of_L12m  42064 non-null  float64\n",
+      " 66  pct_currentBal_all_TL       42064 non-null  float64\n",
+      " 67  CC_Flag                     42064 non-null  int64  \n",
+      " 68  PL_Flag                     42064 non-null  int64  \n",
+      " 69  pct_PL_enq_L6m_of_L12m      42064 non-null  float64\n",
+      " 70  pct_CC_enq_L6m_of_L12m      42064 non-null  float64\n",
+      " 71  pct_PL_enq_L6m_of_ever      42064 non-null  float64\n",
+      " 72  pct_CC_enq_L6m_of_ever      42064 non-null  float64\n",
+      " 73  HL_Flag                     42064 non-null  int64  \n",
+      " 74  GL_Flag                     42064 non-null  int64  \n",
+      " 75  last_prod_enq2              42064 non-null  object \n",
+      " 76  first_prod_enq2             42064 non-null  object \n",
+      " 77  Credit_Score                42064 non-null  int64  \n",
+      " 78  Approved_Flag               42064 non-null  object \n",
+      "dtypes: float64(13), int64(60), object(6)\n",
+      "memory usage: 25.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
